--- a/help_im_new.html
+++ b/help_im_new.html
@@ -17,33 +17,26 @@
       padding: 10px;
     }
 
-    /* Match collapsible header styling exactly */
-    .card.section-card {
-      padding: 0;
-      margin-bottom: 1rem;
-      box-shadow: none;
-      background: transparent;
-    }
-
+    /* Collapsible header styling to match other pages */
     .card-header {
-      background-color: #ffffff;
+      background-color: #f8f9fa;
+      border: 1px solid #ddd;
       border-radius: 8px;
       padding: 1rem 2rem;
-      border: 1px solid #ddd;
       margin-bottom: 1rem;
     }
 
     .card-header a {
       font-weight: 600;
-      color: #212529;
+      color: #0d6efd;
       text-decoration: none;
       display: block;
     }
 
     .card-header a:hover,
     .card-header a:focus {
-      color: #0d6efd;
-      text-decoration: none;
+      color: #084298;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -56,17 +49,18 @@
 
   <!-- Intro Section -->
   <section id="intro" class="text-center py-5" style="background-color: #f0f4f8;">
-    <div class="container section-card" style="background: rgba(255, 255, 255, 0.85); padding: 2rem 3rem; border-radius: 12px; max-width: 700px; margin: 0 auto;">
+    <div class="container section-card"
+      style="background: rgba(255, 255, 255, 0.85); padding: 2rem 3rem; border-radius: 12px; max-width: 700px; margin: 0 auto;">
       <h1>Help! I’m new.</h1>
       <p>
-        If you’re a parent or guardian located in the Hawkesbury area (or nearby!), searching out coaching for your child in football you’ve come to the right place.
+        If you’re a parent or guardian located in the Hawkesbury area (or nearby!), searching out coaching for your child in football you’ve
+        come to the right place.
       </p>
       <p>
         Whether you’re new to the game or you played yourself this page is designed to help.
       </p>
     </div>
   </section>
-
 
   <!-- Collapsible Content Section -->
   <section class="py-5 my-5">
@@ -82,22 +76,26 @@
               </a>
             </h5>
           </div>
-          <div id="collapseWhyUs" class="collapse show" role="tabpanel" aria-labelledby="headingWhyUs" data-parent="#helpAccordion">
+          <div id="collapseWhyUs" class="collapse show" role="tabpanel" aria-labelledby="headingWhyUs"
+            data-parent="#helpAccordion">
             <div class="card-body">
               <p>
-                Currently, the Australian football grassroots (i.e. U18 and below) landscape is a volunteer-centric one.
-                As a community, we look to adult volunteers to surrender what limited free time they have, to fill the many ranks of
-                coaches needed for our young children enrolling in competition teams for the duration of their youth playing experience.</p>
+                Currently, the Australian football grassroots (i.e. U18 and below) landscape is a volunteer-centric one. As a
+                community, we look to adult volunteers to surrender what limited free time they have, to fill the many ranks of
+                coaches needed for our young children enrolling in competition teams for the duration of their youth playing
+                experience.</p>
               <p>
-                Whilst admirable, this model has its cavities. One of these is what I refer to as the “coach’s lottery.” When signed up to a local team the first question is always:
-                Is my child’s coach a volunteer parent who knows what they are doing and what is expected of them as a coach.. or...
-                is it a ‘draw-the-short-straw’ type of environment where no parent has any experience and no one is confident to coach.</p>
+                Whilst admirable, this model has its cavities. One of these is what I refer to as the “coach’s lottery.” When
+                signed up to a local team the first question is always: Is my child’s coach a volunteer parent who knows what
+                they are doing and what is expected of them as a coach.. or... is it a ‘draw-the-short-straw’ type of environment
+                where no parent has any experience and no one is confident to coach.</p>
               <p>
-                Meanwhile, time goes by. Your child has been signed up to engage in the experience of committing to a team, whilst that team is meant to reciprocate
-                that commitment through developing your child as an individual and as a proper player within the team.</p>
+                Meanwhile, time goes by. Your child has been signed up to engage in the experience of committing to a team,
+                whilst that team is meant to reciprocate that commitment through developing your child as an individual and as a
+                proper player within the team.</p>
               <p>
-                This is not happening for your child. You recognise your child’s time could be invested other ways.
-                Time is already running out, especially if ambition to play at higher levels begins to express itself in the player.</p>
+                This is not happening for your child. You recognise your child’s time could be invested other ways. Time is already
+                running out, especially if ambition to play at higher levels begins to express itself in the player.</p>
             </div>
           </div>
         </div>
@@ -106,20 +104,24 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingPlayerExpectations">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapsePlayerExpectations" aria-expanded="false" aria-controls="collapsePlayerExpectations">
+              <a class="collapsed" data-toggle="collapse" href="#collapsePlayerExpectations" aria-expanded="false"
+                aria-controls="collapsePlayerExpectations">
                 Player Expectations
               </a>
             </h5>
           </div>
-          <div id="collapsePlayerExpectations" class="collapse" role="tabpanel" aria-labelledby="headingPlayerExpectations" data-parent="#helpAccordion">
+          <div id="collapsePlayerExpectations" class="collapse" role="tabpanel" aria-labelledby="headingPlayerExpectations"
+            data-parent="#helpAccordion">
             <div class="card-body">
               <p>
-                The Academy has coached 100+ players so far in its nearly three years of existence and through this an ‘ideal’ Academy recruit has emerged.</p>
+                The Academy has coached 100+ players so far in its nearly three years of existence and through this an ‘ideal’ Academy recruit
+                has emerged.</p>
               <p>
                 A child that is keen, engaged, and most importantly highly interested in the game of football.</p>
               <p>
                 We find the bulk of our customers are parents and players who have grown discontent with the 'coach’s lottery' and wish to enrol
-                in an environment that guarantees problem-solving and proper learning, whilst replicating an intensity and hardwork... consistently.</p>
+                in an environment that guarantees problem-solving and proper learning, whilst replicating an intensity and hardwork... consistently.
+              </p>
               <p>
                 Any player who joins us is expected to be polite, demonstrate humility, be hardworking, humble, and happy to be with us.</p>
             </div>
@@ -130,29 +132,34 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingAcademyEnvironment">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapseAcademyEnvironment" aria-expanded="false" aria-controls="collapseAcademyEnvironment">
+              <a class="collapsed" data-toggle="collapse" href="#collapseAcademyEnvironment" aria-expanded="false"
+                aria-controls="collapseAcademyEnvironment">
                 Academy Environment
               </a>
             </h5>
           </div>
-          <div id="collapseAcademyEnvironment" class="collapse" role="tabpanel" aria-labelledby="headingAcademyEnvironment" data-parent="#helpAccordion">
+          <div id="collapseAcademyEnvironment" class="collapse" role="tabpanel" aria-labelledby="headingAcademyEnvironment"
+            data-parent="#helpAccordion">
             <div class="card-body">
               <p>
                 “Tough but fair.” This is the term that has been mentioned a couple of times by current members of our Academy.
-                The Academy playing environment is very different from the broader Australian landscape. A key point of difference we wish to highlight.</p>
+                The Academy playing environment is very different from the broader Australian landscape. A key point of difference we
+                wish to highlight.</p>
               <p>
-                “Tough” – As mentioned above, we expect 100% effort and concentration from every player for the duration of training. Discipline is key. Obvious exceptions include injury and illness.
-                We forbid clearances of any kind. “Just boot it” or “get it out of there” are terms for the birds! Not our players at any time!</p>
+                “Tough” – As mentioned above, we expect 100% effort and concentration from every player for the duration of training.
+                Discipline is key. Obvious exceptions include injury and illness. We forbid clearances of any kind. “Just boot it”
+                or “get it out of there” are terms for the birds! Not our players at any time!</p>
               <p>
-                We forbid game management and in-game time wasting of any kind. i.e. letting the ball intentionally roll out to secure a goal kick or corner or throw in. Keep the ball in play!</p>
+                We forbid game management and in-game time wasting of any kind. i.e. letting the ball intentionally roll out to secure a
+                goal kick or corner or throw in. Keep the ball in play!</p>
               <p>
                 We challenge the player in multiple different areas/positions on the field.</p>
               <p>
                 “Fair” - There is no winning or losing.</p>
               <p>
-                In brief, we strongly advocate for the argument that performance-based outcomes
-                is an adult concept and should not be introduced to players before ~U15’s.
-                As such, players that attend this Academy count no scorelines, receive no ranks, there are no leagues, ladders, “tournaments” or trophies.</p>
+                In brief, we strongly advocate for the argument that performance-based outcomes is an adult concept and should not be
+                introduced to players before ~U15’s. As such, players that attend this Academy count no scorelines, receive no ranks,
+                there are no leagues, ladders, “tournaments” or trophies.</p>
               <p>
                 Mistakes are encouraged, not condemned. There is a desire to see errors on the ball from players.</p>
               <p>
@@ -160,9 +167,9 @@
               <p>
                 Patience. The development demands we place on players are long term i.e. months and years. Not seasons.</p>
               <p>
-                Finally, we place our own high expectations on session design.
-                We expect our sessions to have very little down-time, maximum engagement and a necessary level of variability in session exercises,
-                keeping things interesting for all players involved.</p>
+                Finally, we place our own high expectations on session design. We expect our sessions to have very little down-time,
+                maximum engagement and a necessary level of variability in session exercises, keeping things interesting for all players
+                involved.</p>
             </div>
           </div>
         </div>
@@ -171,19 +178,23 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingParentExpectations">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapseParentExpectations" aria-expanded="false" aria-controls="collapseParentExpectations">
+              <a class="collapsed" data-toggle="collapse" href="#collapseParentExpectations" aria-expanded="false"
+                aria-controls="collapseParentExpectations">
                 Parent Expectations
               </a>
             </h5>
           </div>
-          <div id="collapseParentExpectations" class="collapse" role="tabpanel" aria-labelledby="headingParentExpectations" data-parent="#helpAccordion">
+          <div id="collapseParentExpectations" class="collapse" role="tabpanel" aria-labelledby="headingParentExpectations"
+            data-parent="#helpAccordion">
             <div class="card-body">
               <p>Do not coach your child while they attend the Academy.</p>
-              <p>Your primary task is to ensure they are happy and safe. This does not extend into the realm of making in-game decisions on their behalf.</p>
+              <p>Your primary task is to ensure they are happy and safe. This does not extend into the realm of making in-game decisions
+                on their behalf.</p>
               <p>Any concerns with the coaching environment are to be raised with the coaching staff outside of coaching hours.</p>
-              <p>We are an Academy NOT “extra coaching.” We teach in a curriculum style, covering everything the volunteer system leaves to chance.
-                If your child is thriving here, we ask you make the Academy the priority in their extracurricular life.
-                i.e. prioritize attending our session multiple times per week over all other sporting commitments after school hours. (That is ‘ask’ we do not demand).</p>
+              <p>We are an Academy NOT “extra coaching.” We teach in a curriculum style, covering everything the volunteer system leaves to
+                chance. If your child is thriving here, we ask you make the Academy the priority in their extracurricular life. i.e.
+                prioritize attending our session multiple times per week over all other sporting commitments after school hours. (That is
+                ‘ask’ we do not demand).</p>
               <p>They must reintegrate back into the system at some point, anyway. We hope that is at a higher level based on their improvement.</p>
             </div>
           </div>
@@ -193,14 +204,17 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingWhereWhen">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapseWhereWhen" aria-expanded="false" aria-controls="collapseWhereWhen">
+              <a class="collapsed" data-toggle="collapse" href="#collapseWhereWhen" aria-expanded="false"
+                aria-controls="collapseWhereWhen">
                 Where and When?
               </a>
             </h5>
           </div>
-          <div id="collapseWhereWhen" class="collapse" role="tabpanel" aria-labelledby="headingWhereWhen" data-parent="#helpAccordion">
+          <div id="collapseWhereWhen" class="collapse" role="tabpanel" aria-labelledby="headingWhereWhen"
+            data-parent="#helpAccordion">
             <div class="card-body">
-              <p>We have operated across several fields in the Hawkesbury area e.g. Benson’s Lane, Richmond Oval, McQuade Park, Windsor, etc We are constantly moved. However, it is always very local.</p>
+              <p>We have operated across several fields in the Hawkesbury area e.g. Benson’s Lane, Richmond Oval, McQuade Park,
+                Windsor, etc We are constantly moved. However, it is always very local.</p>
               <p>For our latest locations and times, best to check our Facebook page or call Nick on 0452 583 279.</p>
             </div>
           </div>
@@ -210,7 +224,8 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingPricing">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapsePricing" aria-expanded="false" aria-controls="collapsePricing">
+              <a class="collapsed" data-toggle="collapse" href="#collapsePricing" aria-expanded="false"
+                aria-controls="collapsePricing">
                 Pricing
               </a>
             </h5>
@@ -226,12 +241,14 @@
         <div class="card section-card mb-3">
           <div class="card-header" role="tab" id="headingAttendance">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" href="#collapseAttendance" aria-expanded="false" aria-controls="collapseAttendance">
+              <a class="collapsed" data-toggle="collapse" href="#collapseAttendance" aria-expanded="false"
+                aria-controls="collapseAttendance">
                 Attendance
               </a>
             </h5>
           </div>
-          <div id="collapseAttendance" class="collapse" role="tabpanel" aria-labelledby="headingAttendance" data-parent="#helpAccordion">
+          <div id="collapseAttendance" class="collapse" role="tabpanel" aria-labelledby="headingAttendance"
+            data-parent="#helpAccordion">
             <div class="card-body">
               <p>Two sessions a week is highly recommended at this Academy. Not too little, not too much.</p>
             </div>
