--- a/help_im_new.html
+++ b/help_im_new.html
@@ -19,24 +19,28 @@
 
     /* Collapsible header styling to match other pages */
     .card-header {
-      background-color: #f8f9fa;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1rem 2rem;
-      margin-bottom: 1rem;
-    }
+  background-color: #f8f9fa;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 1.5rem 2.5rem; /* increased vertical and horizontal padding */
+  margin-bottom: 1.5rem;  /* slightly more bottom margin for spacing */
+}
 
-    .card-header a {
-      font-weight: 600;
-      color: #0d6efd;
-      text-decoration: none;
-      display: block;
-    }
+.card-header a {
+  font-weight: 600;
+  color: #0d6efd;
+  text-decoration: none;
+  display: block;
+  line-height: 1.5; /* more spacing between lines if multi-line */
+  padding: 0.3rem 0; /* vertical padding inside the link */
+}
 
-    .card-header a:hover,
-    .card-header a:focus {
-      color: #084298;
-      text-decoration: underline;
+.card-header a:hover,
+.card-header a:focus {
+  color: #084298;
+  text-decoration: underline;
+}
+
     }
   </style>
 </head>
