--- a/Staff.html
+++ b/Staff.html
@@ -45,17 +45,17 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-						My background and pathway into coaching is rather unorthodox. Entering the industry at a later stage in life.
+						My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life.
 						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my
 						player experiences to coaching.
-						I have reflected carefully on my motivations for doing this,
+						I have reflected carefully on my motivations for making this career choice,
 						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is
 						important,
-						and never received in my youth. e.g. improvment over winning. </p>
+						and never received in my youth. e.g. development over winning. </p>
 						<p class="lead">
 						I have been described by some parents as 'tough but fair.' 
-						I sincerely want the best for whoever I coach because I am aware of how competative it is out there. 
-						I believe every child should be prepared to feel comfortable playing against and amoungst a wide range of their peers in any environment.</p>
+						I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. 
+						I believe every child should be prepared to feel confident and composed playing against and amoungst a wide range of their peers in any environment.</p>
 					<h2>Playing History (2000 – 2011)</h2>
 					<p class="lead">
 						Representative football (now NPL) from U/13’s. </p>
@@ -94,7 +94,8 @@
 					<ul class="a">
 						<li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
 						<li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
-						<li> <a href="./img/Barnett-Moore_MiniRoos_Cert.pdf">Miniroos Training Qualification</a></li>
+						<li> <a href="./img/Barnett-Moore_C-Licence_2025.jpg">AFC C Licence</a></li>
+						<li> <a href="./img/Barnett-Moore_Barca_Coursework.pdf">Introduction to Academy Coaching (FC Barcelona - Coursework only)</a></li>
 					</ul>
 				</div>
 
