--- a/Staff.html
+++ b/Staff.html
@@ -94,7 +94,7 @@
 					<ul class="a">
 						<li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
 						<li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
-						<li> <a href="./img/Barnett-Moore_C-Licence_2025.jpg">AFC C Licence</a></li>
+						<li> <a href="./img/Barnett-Moore_C-Licence_2025.JPG">AFC C Licence</a></li>
 						<li> <a href="./img/Barnett-Moore_Barca_Coursework.pdf">Introduction to Academy Coaching (FC Barcelona - Coursework only)</a></li>
 					</ul>
 				</div>
