--- a/Staff.html
+++ b/Staff.html
@@ -2,124 +2,143 @@
 <html lang="en">
 
 <head>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
-	<link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
-	<title>Foot and Ball Academy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/uikit.min.css">
+  <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.css">
+  <title>Foot and Ball Academy</title>
 </head>
 
 <body>
+  <!-- Nav Section Start -->
+  <div id="nav-placeholder"></div>
+  <!-- Nav Section End -->
 
-	<!-- Nav Section Start -->
-	<div id="nav-placeholder"></div>
-	<!-- Nav Section End -->
+  <!-- Title Section -->
+  <section id="intro" class="py-5">
+    <div class="container">
+      <div class="intro-box text-center">
+        <h1 class="mb-4">Meet Our Staff</h1>
+        <p class="lead">Get to know the dedicated people behind Foot and Ball Academy</p>
+      </div>
+    </div>
+  </section>
 
+  <!-- Main Content -->
+  <div class="container my-5">
+    <div class="accordion" id="staffAccordion">
 
-	<!-- About Section Start -->
-	<section id="about" class="text-center py-5 text-light">
-		<div class="inner-overlay">
-			<div class="container">
-				<div class="row">
-					<div class="col mt-5 pt-4">
-						<h1 class="text-light">Staff</h1>
-						<p class="lead">
-							Knowledgeable and enthusiastic.
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Section End -->
+      <!-- Section 1 -->
+      <div class="card mb-3">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-link text-primary" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Head Coach and Founder
+            </button>
+          </h2>
+        </div>
+        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#staffAccordion">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-8">
+                <p class="lead">My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life. Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, and never received in my youth. e.g. development over winning.</p>
+                <p class="lead">I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.</p>
+              </div>
+              <div class="col-md-4 text-center">
+                <img src="img/nick.jpg" class="img-fluid rounded-circle" style="max-width: 200px;">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-	<!-- Info Section Start -->
-	<section id="about-info" class="py-5 my-5">
-		<div class="container">
-			<div class="row">
+      <!-- Section 2 -->
+      <div class="card mb-3">
+        <div class="card-header" id="headingTwo">
+          <h2 class="mb-0">
+            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Playing History (2000 – 2011)
+            </button>
+          </h2>
+        </div>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#staffAccordion">
+          <div class="card-body">
+            <ul class="lead">
+              <li>Representative football (now NPL) from U/13’s.</li>
+              <li>U/13’s – U/15’s – Hawkesbury City FC.</li>
+              <li>U/16’s – Mount Druitt Rangers (half season) | Granville Rage (now Western Rage).</li>
+              <li>U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</li>
+              <li>(2005) Macarthur Rams trip to England: Training at Chelsea & Liverpool academies. Friendlies with Staines, Rochdale, Reading.</li>
+              <li>(2010) Six-week England visit, trained with semi-pro clubs in Southwest London.</li>
+              <li>(2011) Gap year: Reserve match experience and trial with EFL League 2 club (unsuccessful).</li>
+              <li>(2000 – 2005) Private coaching: Coverer-style curriculum (skills, turns, shooting, plyometrics).</li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-				<div class="col-lg-6 col-md-6  align-self-center">
-					<h1>Head Coach and Founder</h1>
-					<p class="lead">
-						My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life.
-						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my
-						player experiences to coaching.
-						I have reflected carefully on my motivations for making this career choice,
-						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is
-						important,
-						and never received in my youth. e.g. development over winning. </p>
-						<p class="lead">
-						I have been described by some parents as 'tough but fair.' 
-						I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. 
-						I believe every child should be prepared to feel confident and composed playing against and amoungst a wide range of their peers in any environment.</p>
-					<h2>Playing History (2000 – 2011)</h2>
-					<p class="lead">
-						Representative football (now NPL) from U/13’s. </p>
-					<p class="lead">
-						U/13’s – U/15’s – Hawkesbury City FC.</p>
-					<p class="lead">
-						U/16’s – Mount Druitt Rangers (half season) |Granville Rage (now Western Rage).</p>
-					<p class="lead">
-						U/18’s – Granville Rage (half season) | Macarthur Rams (half season).</p>
-					<p class="lead">
-						(2005) Member of travelling squad with Macarthur Rams to England. Training sessions at Cobham (Chelsea), and
-						Melwood (Liverpool).
-						Friendly non-league matches against Staines, Rochdale, Reading, etc.</p>
-					<p class="lead">
-						(2010) Six-week holiday visit to England. Training with semi-professional club in Southwest London.</p>
-					<p class="lead">
-						(2011) Gap year in England. Reserve match experience with semi-professional clubs in Southwest London.</p>
-					<p class="lead">
-						(2011) Day trial with EFL League 2 club (outcome: unsuccessful).</p>
-					<p class="lead">
-						(2000 – 2005) private coaching (Coverer-style curriculum). Ball skills, turns, passing, shooting,
-						plyometrics, etc.</p>
-					<h2>Teacher History</h2>
-					<p class="lead">
-						(2007 – 2010) Learn to swim instructor. Former AUST Swim qualifications. 1.5 – 16-year-olds.</p>
-					<p class="lead">
-						(2013-2016) University Lecturer and Tutor. During post-graduate studies, taught complex technical topics to
-						undergraduates and industry professionals. Class preparation, content design and delivery, solicting of
-						feedback, all to a wide cohort of students with different backgrounds and goals.
-					<p class="lead">
-						(2022 – current) Kids football coach.</p>
+      <!-- Section 3 -->
+      <div class="card mb-3">
+        <div class="card-header" id="headingThree">
+          <h2 class="mb-0">
+            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Teacher History
+            </button>
+          </h2>
+        </div>
+        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#staffAccordion">
+          <div class="card-body">
+            <ul class="lead">
+              <li>(2007 – 2010) Learn to swim instructor. Former AUST Swim quals. 1.5 – 16-year-olds.</li>
+              <li>(2013-2016) University Lecturer & Tutor. Designed & delivered technical content to diverse cohorts.</li>
+              <li>(2022 – current) Kids football coach.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-					</p>
-					<h2>Qualifications</h2>
+      <!-- Section 4 -->
+      <div class="card mb-3">
+        <div class="card-header" id="headingFour">
+          <h2 class="mb-0">
+            <button class="btn btn-link text-primary collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Qualifications
+            </button>
+          </h2>
+        </div>
+        <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#staffAccordion">
+          <div class="card-body">
+            <ul class="lead">
+              <li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check</a></li>
+              <li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
+              <li><a href="./img/Barnett-Moore_C-Licence_2025.JPG">AFC C Licence</a></li>
+              <li><a href="./img/Barnett-Moore_Barca_Coursework.pdf">Intro to Academy Coaching (FC Barcelona)</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-					<ul class="a">
-						<li><a href="./img/Barnett-Moore_WWCC_2022.pdf">Working With Children Check </a></li>
-						<li><a href="./img/Barnett-Moore_PoliceCheck_2022.pdf">NSW Police Check</a></li>
-						<li> <a href="./img/Barnett-Moore_C-Licence_2025.JPG">AFC C Licence</a></li>
-						<li> <a href="./img/Barnett-Moore_Barca_Coursework.pdf">Introduction to Academy Coaching (FC Barcelona - Coursework only)</a></li>
-					</ul>
-				</div>
+    </div>
+  </div>
 
-				<div class="col-lg-6 col-md-6 align-self-top text-center">
-					<img src="img/nick.jpg" class="img-fluid w-50 h-60 rounded-circle">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- About Info Section End -->
+  <!-- Footer Section Start -->
+  <div id="foot-placeholder"></div>
+  <!-- Footer Section End -->
 
-
-	<!-- Footer Section Start -->
-	<div id="foot-placeholder"></div>
-	<!-- Footer Section Start -->
-
-	<script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/uikit.min.js"></script>
-	<script type="text/javascript" src="js/uikit-icons.min.js"></script>
-	<script>$(function () { $("#nav-placeholder").load("navbar.html"); });</script>
-	<script>$(function () { $("#foot-placeholder").load("footer.html"); });</script>
-
+  <script type="text/javascript" src="js/jquery-3.6.4.min.js"></script>
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/uikit.min.js"></script>
+  <script type="text/javascript" src="js/uikit-icons.min.js"></script>
+  <script>
+    $(function () {
+      $("#nav-placeholder").load("navbar.html");
+      $("#foot-placeholder").load("footer.html");
+    });
+  </script>
 </body>
 
 </html>
