--- a/Staff.html
+++ b/Staff.html
@@ -44,8 +44,13 @@
           <div class="card-body">
             <div class="row">
               <div class="col-md-8">
-                <p class="lead">My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life. Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, and never received in my youth. e.g. development over winning.</p>
-                <p class="lead">I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.</p>
+                <p class="lead">My background and pathway into coaching is rather unorthodox having chose to enter the industry at a later stage in life. 
+                  Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my player experiences to coaching. 
+                  I have reflected carefully on my motivations for making this career choice, and want to ensure everyone that my main goal is to provide a coaching environment I now realise is important, 
+                  and never received in my youth. e.g. development over winning.</p>
+                <p class="lead">I have been described by some parents as 'tough but fair.' I sincerely want the best for whoever I coach because I am aware of how competitive it is out there. 
+                  I believe every child should be prepared to feel confident and composed playing against and amongst a wide range of their peers in any environment.</p>
+                <p class="lead">See you on the fields! Coach Nick.</p>
               </div>
               <div class="col-md-4 text-center">
                 <img src="img/nick.jpg" class="img-fluid rounded-circle" style="max-width: 200px;">
