--- a/navbar.html
+++ b/navbar.html
@@ -9,10 +9,9 @@
     <button class="navbar-toggler navbar-toggler-right" data-toggle="collapse" data-target="#navBar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navBar">
+    <div class="collapse navbar-collapse justify-content-between" id="navBar">
       <ul class="navbar-nav justify-content-center" style="font-family: 'Open Sans', sans-serif;">
 
-        <!-- New direct links with some spacing and inline hover color -->
         <li class="nav-item" style="margin: 0 15px;">
           <a class="nav-link" href="help_im_new.html" 
              style="color: white;" 
@@ -21,6 +20,7 @@
              Help! I'm New
           </a>
         </li>
+
         <li class="nav-item" style="margin: 0 15px;">
           <a class="nav-link" href="OurPhilosophy.html" 
              style="color: white;" 
@@ -29,6 +29,7 @@
              Coaching Philosophy
           </a>
         </li>
+
         <li class="nav-item" style="margin: 0 15px;">
           <a class="nav-link" href="academy.html" 
              style="color: white;" 
@@ -38,24 +39,29 @@
           </a>
         </li>
 
-        <!-- Single dropdown -->
         <li class="nav-item dropdown" style="margin: 0 15px;">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false" style="color: white;">
             About Us
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
-            <a class="dropdown-item" href="Staff.html">Staff</a>
+            <a class="dropdown-item" href="Staff.html">Academy Staff</a>
             <a class="dropdown-item" href="Privacy.html">Privacy</a>
             <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
+            <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
           </div>
         </li>
 
-        <!-- Register button -->
         <li class="nav-item" style="margin: 0 15px;">
           <a class="btn btn-warning" href="register.html" style="padding: 8px 20px; font-weight: bold;">
             <b>Register Now</b>
+          </a>
+        </li>
+
+        <!-- Phone number, desktop only -->
+        <li class="nav-item d-none d-lg-block" style="margin-left: 20px;">
+          <a href="tel:+61452583279" class="navbar-text text-white" style="font-weight: 500; text-decoration: none;">
+            📞 +61 452 583 279
           </a>
         </li>
 
