--- a/navbar.html
+++ b/navbar.html
@@ -60,9 +60,10 @@
 
         <!-- Phone number, desktop only -->
         <li class="nav-item d-none d-lg-block" style="margin-left: 20px;">
-          <a href="tel:+61452583279" class="navbar-text text-white" style="font-weight: 500; text-decoration: none;">
-            📞 +61 452 583 279
-          </a>
+        <a href="tel:+61400123456" class="navbar-text text-white ml-3" style="white-space: nowrap; font-weight: 500; text-decoration: none;">
+        📞 +61 400 123 456
+        </a>
+
         </li>
 
       </ul>
